Fix: Table Data Alignment

--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Poppins", sans-serif !important;
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 
 .App {
@@ -56,7 +56,6 @@ body {
   top: 0 !important;
 }
 
-
 /* width */
 ::-webkit-scrollbar {
   height: 5px;
@@ -65,7 +64,7 @@ body {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #D9D9D9; /* Light gray */
+  background: #d9d9d9; /* Light gray */
 }
 
 /* Handle */
@@ -77,4 +76,17 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #aaa; /* Dark gray */
+}
+
+#app-container {
+  width: calc(100vw - 100px) !important;
+  transition: width ease 1s !important;
+}
+
+#app-container[data-expand="true"] {
+  /* width: calc(100vw - 110px) !important; */
+}
+
+#app-container[data-expand="false"] {
+  width: calc(100vw - 100px) !important;
 }
